<resources>
    <string name="app_name">Yamba</string>
    <string name="button_tweet">Tweet</string>
    <string name="hint_status">What is on your mind ?</string>
    <string name="username">Username</string>
    <string name="username_summary">Please enter your username</string>
    <string name="password_summary">Please enter your password</string>
    <string name="password">Password</string>
    <string name="action_settings">Action Settings</string>
    <string name="status_update">Status Update</string>
    <string name="refresh">Refresh</string>
    <string name="tweet">Tweet</string>
    <string name="purge">Purge</string>
    <string name="titlePrefs">Preferences</string>
    <string name="itemServiceStart">Refresh</string>
    <string name="slashdot">Slashdot</string>
    <string name="_10_minutes_ago">10 minutes ago</string>
    <string name="android_1">Android #1</string>
    <string name="andriod_just_became_the_1_os_on_the_planet_take_that_microsoft_http_t_co_123">Andriod just became the #1 OS on the planet. Take that, Microsoft! http://t.co/123</string>
    <string name="interval_key">interval</string>
    <string name="interval_summary">How frequently should data refresh?</string>
    <string name="interval">Refresh interval</string>
</resources>
