<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/list_item_text_user"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/slashdot"
        tools:textSize="14sp" />

    <TextView
        android:id="@+id/list_item_text_created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/list_item_text_user"
        android:layout_alignBottom="@id/list_item_text_user"
        android:layout_alignParentEnd="true"
        android:text="@string/_10_minutes_ago" />

    <TextView
        android:id="@+id/list_item_text_message"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/list_item_text_created_at"
        android:layout_alignParentStart="true"
        android:autoLink="web"
        android:linksClickable="false"
        android:text="@string/android_1"
        android:textAppearance="?android:attr/text"
        tools:textSize="36sp" />

</RelativeLayout>